--- a/cms/package.json
+++ b/cms/package.json
@@ -3,15 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios-mock-adapter": "^1.7.1",
-    "axios": "^0.15.3",
-    "g2-mobile": "2.1.13",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "react-addons-test-utils": "^15.6.0",
-    "lodash-webpack-plugin": "^0.11.2",
-    "express": "^4.14.0",
     "antd": "^3.6.6",
     "autoprefixer": "7.1.6",
+    "axios": "^0.15.3",
+    "axios-mock-adapter": "^1.7.1",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -23,6 +18,8 @@
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
+    "echarts": "^4.1.0",
+    "echarts-for-react": "^2.0.13",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
@@ -30,17 +27,22 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "fs-extra": "3.0.1",
+    "g2-mobile": "2.1.13",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash-webpack-plugin": "^0.11.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.1",
+    "react-addons-test-utils": "^15.6.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
