--- a/cms/package.json
+++ b/cms/package.json
@@ -41,6 +41,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "rc-bmap": "^0.1.1",
     "react": "^16.4.1",
     "react-addons-test-utils": "^15.6.0",
     "react-dev-utils": "^5.0.1",
